Experimented with using W3 Badges for city markers; placed N. American cities on map using absolute positioning

--- a/index.html
+++ b/index.html
@@ -4,15 +4,29 @@
 <head>
     <meta charset="utf-8" />
     <title>One Quiet Night</title>
-    <link href="./assets/css/style.css" rel="stylesheet" />
+    <link href="https://www.w3schools.com/w3css/4/w3.css" rel="stylesheet">
+    <link href="./assets/css/style.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Rubik" rel="stylesheet">
 </head>
 <body>
     <header><h1>PANDEMIC<h1></header>
     <main>
-        <img src="./assets/images/world.png" id="board">
+        <div id="map">
+            <img src="./assets/images/world.png">
+            <span id="atlanta" class="city w3-badge w3-tiny blue">0</span>
+            <span id="san-francisco" class="city w3-badge w3-tiny blue">0</span>
+            <span id="chicago" class="city w3-badge w3-tiny blue">0</span>
+            <span id="montreal" class="city w3-badge w3-tiny blue">0</span>
+            <span id="new-york" class="city w3-badge w3-tiny blue">0</span>
+            <span id="dc" class="city w3-badge w3-tiny blue">0</span>
+        </div>
         <div id="player-one"></div>
+        <div id="player-two"></div>
+        <div id="player-three"></div>
+        <div id="player-four"></div>
     </main>
-    <footer>Credits</footer>   
+    <footer>
+        <p> Copyright 2021 Kelly L Vaden
+    </footer>   
 </body>
 </html>
