--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -11,19 +10,24 @@
 <body>
     <header><h1>PANDEMIC<h1></header>
     <main>
-        <div id="map">
-            <img src="./assets/images/world.png">
-            <span id="atlanta" class="city w3-badge w3-tiny blue">0</span>
-            <span id="san-francisco" class="city w3-badge w3-tiny blue">0</span>
-            <span id="chicago" class="city w3-badge w3-tiny blue">0</span>
-            <span id="montreal" class="city w3-badge w3-tiny blue">0</span>
-            <span id="new-york" class="city w3-badge w3-tiny blue">0</span>
-            <span id="dc" class="city w3-badge w3-tiny blue">0</span>
+        <div id="world-map">
+            <svg viewBox="0 0 1000 500" preserveAspectRatio="xMinYMin meet">
+                <image width="1000" height="500" href="./assets/images/world.png"></image>
+                <circle id="atlanta" cx="180" cy="170" r="5" stroke="black" stroke-width="1" fill="blue" />
+                <circle id="san-fran" cx="50" cy="145" r="5" stroke="black" stroke-width="1" fill="blue" />
+                <circle id="chicago" cx="130" cy="130" r="5" stroke="black" stroke-width="1" fill="blue" />
+                <circle id="montreal" cx="200" cy="126" r="5" stroke="black" stroke-width="1" fill="blue" />
+                <circle id="dc" cx="220" cy="170" r="5" stroke="black" stroke-width="1" fill="blue" />
+                <circle id="new-york" cx="245" cy="140" r="5" stroke="black" stroke-width="1" fill="blue" />
+                <line id="san-fran-chicago" x1="50" y1="145" x2="130" y2="130" style="stroke:blue; stroke-width:2" />
+                <line id="atlanta-chicago" x1="180" y1="170" x2="130" y2="130" style="stroke:blue; stroke-width:2" />
+                <line id="atlanta-dc" x1="180" y1="170" x2="220" y2="170" style="stroke:blue; stroke-width:2" />
+                <line id="montreal-chicago" x1="200" y1="126" x2="130" y2="130" style="stroke:blue; stroke-width:2" />
+                <line id="montreal-dc" x1="200" y1="126" x2="220" y2="170" style="stroke:blue; stroke-width:2" />
+                <line id="montreal-new-york" x1="200" y1="126" x2="245" y2="140" style="stroke:blue; stroke-width:2" />
+                <line id="new-york-dc" x1="245" y1="140" x2="220" y2="170" style="stroke:blue; stroke-width:2" />
+            </svg>
         </div>
-        <div id="player-one"></div>
-        <div id="player-two"></div>
-        <div id="player-three"></div>
-        <div id="player-four"></div>
     </main>
     <footer>
         <p> Copyright 2021 Kelly L Vaden
